updating my portfiolio

--- a/index.html
+++ b/index.html
@@ -4,11 +4,83 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/app.css">
     <title>Abhijit/Sharma</title>
 </head>
-<body>
-    <h1>Hellooooooo world</h1>
 
-    <p>Just testing out the deployment</p>
+
+<body>
+    <nav class="navigation container">
+        <div class="nav-brand">iAmAbhijit</div>
+
+        <ul class="list-non-bullet nav-pills">
+            <li class="list-item-inline">
+                <a class="link link-active" href="/">home</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/project.html">projects</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/blogs.html">blogs</a>
+            </li>
+        </ul>
+    </nav>
+
+    <header class="hero">
+        <img class="hero-img" src="/images/undraw_developer_activity_bv83.svg" alt="">
+        <h1 class="hero-heading">abhijit sharma <span> the web developer</span></h1>
+    </header>
+
+    <section class="section ow">
+        <div class="container container-center">
+            <h3>technologies</h3>
+            <p>This will have gray background Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto
+                alias, harum, aperiam est voluptatum modi dolorem corrupti vitae dolores, amet doloremque. Sapiente
+                assumenda ut aperiam minus suscipit repellendus cum?</p>
+        </div>
+
+    </section>
+
+    <section class="section">
+        <div class="container container-center">
+            <h3>projects</h3>
+            <p>This will have gray background Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto
+                alias, harum, aperiam est voluptatum modi dolorem corrupti vitae dolores, amet doloremque. Sapiente
+                assumenda ut aperiam minus suscipit repellendus cum?
+            </p>
+            <a class="link link-primary" href="/">My Projects</a>
+        </div>
+
+    </section>
+    
+    <section class="section ow">
+        <div class="container container-center">
+            <h3>blogs</h3>
+            <p>This will have gray background Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto
+                alias, harum, aperiam est voluptatum modi dolorem corrupti vitae dolores, amet doloremque. Sapiente
+                assumenda ut aperiam minus suscipit repellendus cum?
+            </p>
+            <a class="link link-primary" href="/">My Projects</a>
+
+        </div>
+
+    </section>
+
+    <footer class="footer">
+        <div class="footer-header">
+            Social Media Presence</div>
+        <ul class="social-links list-non-bullet">
+            <li class="list-item-inline">
+                <a class="link" href="/">socialone</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/">socialtwo</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/">socialthree</a>
+            </li>
+        </ul>
+    </footer>
+
 </body>
 </html>
