updated my portfolio

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" 
+    rel="stylesheet">
     <link rel="stylesheet" href="/app.css">
     <title>Abhijit/Sharma</title>
 </head>
@@ -18,7 +21,7 @@
                 <a class="link link-active" href="/">home</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/project.html">projects</a>
+                <a class="link" href="/projects.html">projects</a>
             </li>
             <li class="list-item-inline">
                 <a class="link" href="/blogs.html">blogs</a>
@@ -34,9 +37,8 @@
     <section class="section ow">
         <div class="container container-center">
             <h3>technologies</h3>
-            <p>This will have gray background Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto
-                alias, harum, aperiam est voluptatum modi dolorem corrupti vitae dolores, amet doloremque. Sapiente
-                assumenda ut aperiam minus suscipit repellendus cum?</p>
+            <p>I am familiar with <span class="tech">HTML5</span>, <span class="tech">CSS3</span>, <span class="tech">Git</span>, <span class="tech">Bootstrap5</span> and
+            <span class="tech">Web Hosting</span>.<br>Apart from these technologies, I am also pretty good at Office Suites like Word,Excel,Powerpoint.</p>
         </div>
 
     </section>
@@ -44,11 +46,8 @@
     <section class="section">
         <div class="container container-center">
             <h3>projects</h3>
-            <p>This will have gray background Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto
-                alias, harum, aperiam est voluptatum modi dolorem corrupti vitae dolores, amet doloremque. Sapiente
-                assumenda ut aperiam minus suscipit repellendus cum?
-            </p>
-            <a class="link link-primary" href="/">My Projects</a>
+            <p>I like to showcase my work and thus, you can see my projects hosted online</p>
+            <a class="link link-primary" href="/projects.html">My Projects</a>
         </div>
 
     </section>
@@ -56,11 +55,11 @@
     <section class="section ow">
         <div class="container container-center">
             <h3>blogs</h3>
-            <p>This will have gray background Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto
-                alias, harum, aperiam est voluptatum modi dolorem corrupti vitae dolores, amet doloremque. Sapiente
-                assumenda ut aperiam minus suscipit repellendus cum?
+            <p>Apart from my intrest in programming and designing, I also like to work on some technical and non technical blogs.
+                <br>
+                I like to document my journey and share my learnings that might be valuable to someone starting out.
             </p>
-            <a class="link link-primary" href="/">My Projects</a>
+            <a class="link link-secondary" href="/blogs.html">Read Blogs</a>
 
         </div>
 
@@ -71,13 +70,13 @@
             Social Media Presence</div>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
-                <a class="link" href="/">socialone</a>
+                <a class="link" href="https://github.com/abhijitdotsharma">GitHub</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/">socialtwo</a>
+                <a class="link" href="https://www.linkedin.com/in/abhijitdotsharma/">LinkedIn</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/">socialthree</a>
+                <a class="link" href="https://www.instagram.com/abhijit.exe/">Instagram</a>
             </li>
         </ul>
     </footer>
