Update - Added temp file thankyou.html

--- a/projects.html
+++ b/projects.html
@@ -35,8 +35,10 @@
                  <small>June, 2021</small>
                  <p>A website with short and simple lifestyle and eating habits that help people trying to be vegan
                  </p>
-                 <a class="link link-primary" href="https://demolink">Live Project</a>
-                 <a class="link link-secondary" href="https://githublink">View Source</a>
+                 <p>This project is not fully updated, just basic design is applied. More updates to come
+                 </p>
+                 <a class="link link-primary" href="https://easyvegan.netlify.app/">Live Project</a>
+                 <a class="link link-secondary" href="https://github.com/abhijitdotsharma/Portfolio">View Source</a>
              </div>
          </li>
        
@@ -44,17 +46,17 @@
         <li>
            <div class="container container-center">
                 <h1>tribute page</h1>
-                <small>May, 2021</small>
+                <small>July, 2021</small>
                 <p>A fan-page made for Dr.Krishna Ella, the founder of Bharat Biotech(vaccine manufacturing
-                    company launched CovidShield vaccine).
+                    company that launched CovidShield vaccine).
                 
                     <ul>
                         <li>lightweight</li>
                         <li>responsive</li>
                     </ul>
                 </p>
-                <a class="link link-primary" href="https://demolink">Live Project</a>
-                <a class="link link-secondary" href="https://githublink">View Source</a>
+                <a class="link link-primary" href="/thankyou.html">Live Project</a>
+                <a class="link link-secondary" href="/thankyou.html">View Source</a>
             </div>
         </li>
         <li>
@@ -64,8 +66,8 @@
                  <p>simpe toy project made to improve my design sense, oh and added here so that my website doesn't look
                      empty :) 
                  </p>
-                 <a class="link link-primary" href="https://demolink">Live Project</a>
-                 <a class="link link-secondary" href="https://githublink">View Source</a>
+                 <a class="link link-primary" href="https://pricingpanelabhijit.netlify.app/">Live Project</a>
+                 <a class="link link-secondary" href="https://github.com/abhijitdotsharma/practise-projects">View Source</a>
              </div>
          </li>
     </ul>
