update- spellings and grammer

--- a/blogs.html
+++ b/blogs.html
@@ -34,7 +34,7 @@
             <div class="container container-center">
                  <h1>blogs are coming soon</h1>
                  <small>june, 2021</small>
-                 <a class="link link-primary" href="https://demolink">Read More</a>
+                 <a class="link link-primary" href="/thankyou.html">Read More</a>
              </div>
          </li>
        
