--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="container container-center">
             <h3>technologies</h3>
             <p>I am familiar with <span class="tech">HTML5</span>, <span class="tech">CSS3</span>, <span class="tech">Git</span>, <span class="tech">Bootstrap5</span> and
-            <span class="tech">Web Hosting</span>.<br>Apart from these technologies, I am also pretty good at Office Suites like Word,Excel,Powerpoint.</p>
+            <span class="tech">Web Hosting</span>.<br>Apart from these technologies, I am also pretty good at <span class="tech">Office Suites</span> like Word,Excel,Powerpoint.</p>
         </div>
 
     </section>
