--- a/thankyou.html
+++ b/thankyou.html
@@ -29,8 +29,9 @@
 
     <section class="section">
         <div class="container container-center">
-            <h3>projects will start being updated from July,2021</h3>
-            <p>I am currently learning JavaScript, I will upload the project by adding some cool functionality. <br>
+            <h3>projects and blogs will start being updated from July,2021</h3>
+            <p>I am currently learning JavaScript, I will upload projects by adding some cool functionalites. 
+                <br>Additionally, I will be documenting my learnings and mistakes through blogs. <br>
                 Thank you for your patience.
             </p>
         </div>
