update- added resume

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <header class="hero">
         <img class="hero-img" src="/images/undraw_developer_activity_bv83.svg" alt="">
-        <h1 class="hero-heading">abhijit sharma <span> the web developer</span></h1>
+        <h1 class="hero-heading">abhijit sharma <span> the web developer</span></h1>        
     </header>
 
     <section class="section ow">
@@ -39,6 +39,8 @@
             <h3>technologies</h3>
             <p>I am familiar with <span class="tech">HTML5</span>, <span class="tech">CSS3</span>, <span class="tech">Git</span>, <span class="tech">Bootstrap5</span> and
             <span class="tech">Web Hosting</span>.<br>Apart from these technologies, I am also pretty good at <span class="tech">Office Suites</span> like Word,Excel,Powerpoint.</p>
+            <a class="link link-primary" href="https://drive.google.com/drive/folders/1Q_8fbvRyzVRqROL-TESZ75pozvtAs4YO?usp=sharing">My Resume</a>
+
         </div>
 
     </section>
@@ -47,7 +49,7 @@
         <div class="container container-center">
             <h3>projects</h3>
             <p>I like to showcase my work and thus, you can see my projects hosted online</p>
-            <a class="link link-primary" href="/projects.html">My Projects</a>
+            <a class="link link-secondary" href="/projects.html">My Projects</a>
         </div>
 
     </section>
@@ -59,8 +61,8 @@
                 <br>
                 I like to document my journey and share my learnings that might be valuable to someone starting out.
             </p>
-            <a class="link link-secondary" href="/blogs.html">Read Blogs</a>
-
+            <a class="link link-primary" href="/blogs.html">Read Blogs</a>
+            
         </div>
 
     </section>
