style - fixing the links to hosted projects

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <nav class="navigation container">
-        <div class="nav-brand">iAmAbhijit</div>
+        <div class="nav-brand">abhijit sharma</div>
 
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
@@ -31,15 +31,15 @@
 
     <header class="hero">
         <img class="hero-img" src="/images/undraw_developer_activity_bv83.svg" alt="">
-        <h1 class="hero-heading">abhijit sharma <span> the web developer</span></h1>        
+        <h1 class="hero-heading">hi, I am Abhijit and I like to make <span> web apps</span></h1>        
     </header>
 
     <section class="section ow">
         <div class="container container-center">
             <h3>technologies</h3>
-            <p>I am familiar with <span class="tech">HTML5</span>, <span class="tech">CSS3</span>, <span class="tech">Git</span>, <span class="tech">Bootstrap5</span> and
+            <p>I am familiar with <span class="tech">HTML5</span>, <span class="tech">CSS3</span>,<span class="tech">JavaScript</span>, <span class="tech">ReactJS</span>, <span class="tech">Git</span>, <span class="tech">Bootstrap5</span> and
             <span class="tech">Web Hosting</span>.<br>Apart from these technologies, I am also pretty good at <span class="tech">Office Suites</span> like Word,Excel,Powerpoint.</p>
-            <a class="link link-primary" href="https://drive.google.com/drive/folders/1Q_8fbvRyzVRqROL-TESZ75pozvtAs4YO?usp=sharing">My Resume</a>
+            <!-- <a class="link link-primary" href="https://drive.google.com/drive/folders/1Q_8fbvRyzVRqROL-TESZ75pozvtAs4YO?usp=sharing">My Resume</a> -->
 
         </div>
 
@@ -48,7 +48,7 @@
     <section class="section">
         <div class="container container-center">
             <h3>projects</h3>
-            <p>I like to showcase my work and thus, you can see my projects hosted online</p>
+            <p>I like to showcase the type of work that I do, and you can see my projects hosted online</p>
             <a class="link link-secondary" href="/projects.html">My Projects</a>
         </div>
 
