--- a/projects.html
+++ b/projects.html
@@ -31,6 +31,119 @@
     <ul class="list-non-bullet">
         <li>
             <div class="container container-center">
+                 <h1>stonks</h1>
+                 <small>mark 14</small>
+                 <p>A stock price profit/loss calculator based on JavaScript
+                 </p>
+                 <a class="link link-primary" href="https://stonkshuwakya.netlify.app/">Live Project</a>
+                 <a class="link link-secondary" href="https://github.com/abhijitdotsharma/stonks-or-nostonks-mark14">View Source</a>
+             </div>
+        </li>
+
+        <li>
+            <div class="container container-center">
+                 <h1>palindrome birthday</h1>
+                 <small>mark 13</small>
+                 <p>JavaScript based application that tells if you were born on a palindrome or the nearest palindrome to your birthday
+                 </p>
+                 <a class="link link-primary" href="https://palindromee.netlify.app/">Live Project</a>
+                 <a class="link link-secondary" href="https://github.com/abhijitdotsharma/palindrome-birthday-mark13">View Source</a>
+             </div>
+        </li>
+
+        <li>
+            <div class="container container-center">
+                 <h1>tri-angles</h1>
+                 <small>mark 12</small>
+                 <p>A JavaScript based quiz application for kids(and adults who dont know math)
+                 </p>
+                 <a class="link link-primary" href="https://tri-angles.netlify.app/">Live Project</a>
+                 <a class="link link-secondary" href="https://github.com/abhijitdotsharma/tri-angles">View Source</a>
+             </div>
+        </li>
+
+        <li>
+            <div class="container container-center">
+                 <h1>lucky birthday</h1>
+                 <small>mark 11</small>
+                 <p>JavaScript application to check if your DOB is lucky or not
+                 </p>
+                 <a class="link link-primary" href="https://luckyornot.netlify.app/">Live Project</a>
+                 <a class="link link-secondary" href="https://github.com/abhijitdotsharma/lucky-birthday-mark11">View Source</a>
+             </div>
+         </li>
+        <li>
+            <div class="container container-center">
+                 <h1>cash register</h1>
+                 <small>mark 10</small>
+                 <p>A JS application that can be used to return change out of a given bill and cash paid
+                 </p>
+                 <a class="link link-primary" href="https://chuttepaise.netlify.app/">Live Project</a>
+                 <a class="link link-secondary" href="https://github.com/abhijitdotsharma/cash-register-mark10">View Source</a>
+             </div>
+         </li>
+        <li>
+            <div class="container container-center">
+                 <h1>north-east travel</h1>
+                 <small>mark 9</small>
+                 <p>a ReactJS app for broke teens thinking to travel on a budget
+                 </p>
+                 <a class="link link-primary" href="https://replit.com/@Abhiexe/do-you-even-know-abhijit#index.js?embed=1&output=1">Live Project</a>
+                 <a class="link link-secondary" href="https://github.com/abhijitdotsharma/do-you-know-abhijit-mark1">View Source</a>
+             </div>
+         </li>
+        <li>
+            <div class="container container-center">
+                 <h1>emoji of things</h1>
+                 <small>mark 8</small>
+                 <p>small ReactJS app that can be used to increase knowledge around different flags using emojis
+                 </p>
+                 <a class="link link-primary" href="https://w5xs8.csb.app/">Live Project</a>
+                 <a class="link link-secondary" href="https://github.com/abhijitdotsharma/do-you-know-abhijit-mark1">View Source</a>
+             </div>
+         </li>
+        <li>
+            <div class="container container-center">
+                 <h1>cataluniya</h1>
+                 <small>mark 7</small>
+                 <p>JS app that for barca fans that translates texts into Catalan Language
+                 </p>
+                 <a class="link link-primary" href="https://cataluniya.netlify.app/">Live Project</a>
+                 <a class="link link-secondary" href="https://github.com/abhijitdotsharma/viva-cataluniya">View Source</a>
+             </div>
+         </li>
+        <li>
+            <div class="container container-center">
+                 <h1>minion speak</h1>
+                 <small>mark 6</small>
+                 <p>A fun JS app that translates what you write into minion language
+                 </p>
+                 <a class="link link-primary" href="https://bananalove.netlify.app/">Live Project</a>
+                 <a class="link link-secondary" href="https://github.com/abhijitdotsharma/banana-nana">View Source</a>
+             </div>
+         </li>
+        <li>
+            <div class="container container-center">
+                 <h1>messi 101</h1>
+                 <small>mark 2 project</small>
+                 <p>A quiz on MESSI aka G.O.A.T for the fans in these tough PSG times
+                 </p>
+                 <a class="link link-primary" href="https://replit.com/@Abhiexe/MessiQuiz#index.js?embed=1&output=1">Live Project</a>
+                 <a class="link link-secondary" href="https://github.com/abhijitdotsharma/messi-101">View Source</a>
+             </div>
+         </li>
+        <li>
+            <div class="container container-center">
+                 <h1>do you know Abhijit?</h1>
+                 <small>July, 2021</small>
+                 <p>A nodeJS CLI quiz app that can be shared among friends
+                 </p>
+                 <a class="link link-primary" href="https://replit.com/@Abhiexe/do-you-even-know-abhijit#index.js?embed=1&output=1">Live Project</a>
+                 <a class="link link-secondary" href="https://github.com/abhijitdotsharma/do-you-know-abhijit-mark1">View Source</a>
+             </div>
+         </li>
+        <li>
+            <div class="container container-center">
                  <h1>easy vegan</h1>
                  <small>June, 2021</small>
                  <p>A website with short and simple lifestyle and eating habits that help people trying to be vegan
