--- a/thankyou.html
+++ b/thankyou.html
@@ -29,8 +29,8 @@
 
     <section class="section">
         <div class="container container-center">
-            <h3>projects and blogs will start being updated from July,2021</h3>
-            <p>I am currently learning JavaScript, I will upload projects by adding some cool functionalites. 
+            <h3>These projects and blogs will start being updated from September,2021</h3>
+            <p>I am currently dedicating my time towards learning JavaScript, I will upload projects by adding some cool functionalites. 
                 <br>Additionally, I will be documenting my learnings and mistakes through blogs. <br>
                 Thank you for your patience.
             </p>
