style - adding links and styles

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <header class="hero">
         <img class="hero-img" src="/images/undraw_developer_activity_bv83.svg" alt="">
-        <h1 class="hero-heading">hi, I am Abhijit and I like to make <span> web apps</span></h1>        
+        <h1 class="hero-heading">hey, I am Abhijit and I like to make <span> web apps</span></h1>        
     </header>
 
     <section class="section ow">
