--- a/projects.html
+++ b/projects.html
@@ -76,7 +76,7 @@
             <div class="container container-center">
                  <h1>cash register</h1>
                  <small>mark 10</small>
-                 <p>A JS application that can be used to return change out of a given bill and cash paid
+                 <p>a JS application that can be used to return change out of a given bill and cash paid
                  </p>
                  <a class="link link-primary" href="https://chuttepaise.netlify.app/">Live Project</a>
                  <a class="link link-secondary" href="https://github.com/abhijitdotsharma/cash-register-mark10">View Source</a>
@@ -86,9 +86,9 @@
             <div class="container container-center">
                  <h1>north-east travel</h1>
                  <small>mark 9</small>
-                 <p>a ReactJS app for broke teens thinking to travel on a budget
+                 <p>a reactJS app for broke teens that want to travel on a budget
                  </p>
-                 <a class="link link-primary" href="https://replit.com/@Abhiexe/do-you-even-know-abhijit#index.js?embed=1&output=1">Live Project</a>
+                 <a class="link link-primary" href="https://0hugk.csb.app/">Live Project</a>
                  <a class="link link-secondary" href="https://github.com/abhijitdotsharma/do-you-know-abhijit-mark1">View Source</a>
              </div>
          </li>
@@ -96,10 +96,10 @@
             <div class="container container-center">
                  <h1>emoji of things</h1>
                  <small>mark 8</small>
-                 <p>small ReactJS app that can be used to increase knowledge around different flags using emojis
+                 <p>small ReactJS app that can be used to increase knowledge around different objects using emojis
                  </p>
                  <a class="link link-primary" href="https://w5xs8.csb.app/">Live Project</a>
-                 <a class="link link-secondary" href="https://github.com/abhijitdotsharma/do-you-know-abhijit-mark1">View Source</a>
+                 <a class="link link-secondary" href="https://github.com/abhijitdotsharma/emoji-of-things">View Source</a>
              </div>
          </li>
         <li>
