--- a/projects.html
+++ b/projects.html
@@ -104,9 +104,9 @@
          </li>
         <li>
             <div class="container container-center">
-                 <h1>cataluniya</h1>
+                 <h1>groot</h1>
                  <small>mark 7</small>
-                 <p>JS app that for barca fans that translates texts into Catalan Language
+                 <p>JS app that translates sentences into groot because we love groot.
                  </p>
                  <a class="link link-primary" href="https://cataluniya.netlify.app/">Live Project</a>
                  <a class="link link-secondary" href="https://github.com/abhijitdotsharma/viva-cataluniya">View Source</a>
