update - updated blog links and fixed typos

--- a/blogs.html
+++ b/blogs.html
@@ -32,20 +32,20 @@
     <ul class="list-non-bullet">
         <li>
             <div class="container container-center">
-                 <h1>blogs are coming soon</h1>
-                 <small>june, 2021</small>
-                 <a class="link link-primary" href="/thankyou.html">Read More</a>
+                <h1>Useful VS Code extensions</h1>
+                <p>The best part about VS Code is the ton of extensions available that make software developers love the editor so much....
+                </p>
+                <a target="blank" class="link link-primary" href="https://abhiexe.hashnode.dev/useful-vs-code-extensions-for-web-developers">Read More</a>
+             </div>
+        </li>
+        <li>
+            <div class="container container-center">
+                 <h1>Why using reddit will make you a better developer and a better learner.</h1>
+                 <p>Many people think that Reddit is a great source for memes and jokes, but many don't know that Reddit is used by some super-intelligent people and there are some great subreddits that will make you learn something newer interesting every day...
+                 </p>
+                 <a target="blank" class="link link-primary" href="https://abhiexe.hashnode.dev/why-using-reddit-will-make-you-a-better-developer-and-a-better-learner">Read More</a>
              </div>
          </li>
-       
-       
-        <li>
-           <div class="container container-center">
-                <p>
-                    I will be uploading blogs from july, 2021.
-                </p>
-            </div>
-        </li>
     </ul>
     <footer class="footer">
         <div class="footer-header">
