--- a/projects.html
+++ b/projects.html
@@ -135,7 +135,7 @@
         <li>
             <div class="container container-center">
                  <h1>do you know Abhijit?</h1>
-                 <small>July, 2021</small>
+                 <small>mark 1</small>
                  <p>A nodeJS CLI quiz app that can be shared among friends
                  </p>
                  <a class="link link-primary" href="https://replit.com/@Abhiexe/do-you-even-know-abhijit#index.js?embed=1&output=1">Live Project</a>
