--- a/blogs.html
+++ b/blogs.html
@@ -41,7 +41,7 @@
         <li>
             <div class="container container-center">
                  <h1>Why using reddit will make you a better developer and a better learner.</h1>
-                 <p>Many people think that Reddit is a great source for memes and jokes, but many don't know that Reddit is used by some super-intelligent people and there are some great subreddits that will make you learn something newer interesting every day...
+                 <p>Many people think that Reddit is a great source for memes and jokes, but many don't know that Reddit is used by some super-intelligent people and there are some great subreddits that will make you learn something new or interesting every day...
                  </p>
                  <a target="blank" class="link link-primary" href="https://abhiexe.hashnode.dev/why-using-reddit-will-make-you-a-better-developer-and-a-better-learner">Read More</a>
              </div>
